# anonymizer

./: .dockerignore  .gitignore  Dockerfile  README.md  association-config.yaml  dsnparse.py  main.py  pycon-config.yaml  pyproject.toml  users-config.yaml
.github/workflows/: anonymize-databases.yml  restore-staging-db.yml
transformers/: conference.sql  drop-functions.sql  functions.sql  grants.sql  proposals.sql  users.sql
