[tool.poetry]
name = "anonymizer"
version = "0.1.0"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
typer = "^0.4.2"
docker = "^5.0.3"
rich = "^12.5.1"
boto3 = "^1.24.27"
cryptography = "^37.0.4"
azure-mgmt-containerinstance = "^10.0.0"
azure-identity = "^1.12.0"
azure-keyvault-secrets = "^4.6.0"
azure-storage-blob = "^12.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
